--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My project</title>
+    <link href="./css/main.css" rel="stylesheet"/>
+    <script src="./js/main.js" type="text/javascript"></script>
 </head>
 <body>
+    <div id="app">
+        <header>
+            <nav>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section id="content">
+            <div class="container">
+                <div class="row">
+                    <aside id="sidebar"></aside>
+                </div>
+            </div>
+        </section>
+    </div>
 
 </body>
 </html>
